Fix PR/54325 (use of dangling pointer).